fix: fix broken responsive-img on firefox

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,3 +69,9 @@ a.anchor {
     top: -60px;
     visibility: hidden;
 }
+
+img.responsive-img,
+video.responsive-video {
+  width: 100%;
+  height: auto;
+}
